<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register_geofence_on_menu">Register obstacle</string>
    <string name="set_radius_10">Notification to 10 m</string>
    <string name="set_radius_100">Notification to 100 m</string>
    <string name="set_radius_1000">Notification to 1000 m</string>

    <string name="monitorin_on">Monitoring On</string>
    <string name="monitorin_off">Monitoring Off</string>

    <string name="obstacle_near">Obstacle Near</string>

    <string name="action_bluetooth">Connect Stick</string>
    <string name="menu_clear">Clear history</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_item_clear_geofence_history">Clear stored obstacles</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="begin_monitoring">Liga monitoramento</string>

    <!-- prefence keys, no translation needed -->
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!-- prefence keys, no translation needed -->

    <string name="app_name">Bengala Eletrônica</string>

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>

    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>


    <string name="none_found">Not found</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- Настройки -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>

    <string name="commands_mode">Input mode:</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>

    <string name="title_activity_geofence">Geofence Entry</string>

    <!-- UI -->


    <string name="unregister_success">Obstacles successfully removed</string>
    <string name="unregister_error">Obstacles unregistration falied</string>

    <string name="register_success">Obstacle successfully registered</string>
    <string name="store_data">Store data</string>


    <string name="registration_failed_no_geodata">Fail to register obstacle: No geographic data</string>
    <string name="registration_failed_monitoring_off">Fail to register obstacle: Monitoring off</string>
    <string name="registration_failed_obstacle_already_placed">Fail to register obstacle: Obstacle already exists</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_item_clear_input_geofence">Clear input geofence</string>
    <string name="radius">Radius</string>

    <!-- Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="saveCurrentLocationToFile">Save current location</string>

    <string name="unregister_geofence">Remove geofences</string>
    <string name="testID">Test number</string>
    <string name="stopDetectionTest">Stop detection test</string>
    <string name="startDetectionTest">Start detection test</string>
    <string name="obstaclesQuantity">Quantity of obstacles</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>


    <string name="txtLatitude">Latitude</string>
    <string name="txtLongitude">Longitude</string>

    <string name="currentLatLong">Current Latitude and Longitude</string>

    <string name="activeGeofences">Active Geofences</string>
    <string name="register_from_current_location">Register From Current Location</string>
</resources>