<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".MainActivity" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <Button
                android:id="@+id/resgister_obstacle_from_main_ui"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_geofence_on_menu"
                android:onClick="registerFromCurrentLocation" />

            <ToggleButton
                android:id="@+id/begin_monitoring"
                android:layout_below="@id/resgister_obstacle_from_main_ui"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:textOn="@string/monitorin_on"
                android:textOff="@string/monitorin_off"
                android:onClick="onBeginMonitoring" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
